# AI-Whisper-Next

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  run_ai_whisper.py  version_info.txt
.agents/skills/build-and-package/: SKILL.md
.agents/skills/restart/: SKILL.md  restart-with-log.ps1
.agents/skills/tap-test/: SKILL.md
.agents/skills/verify/: SKILL.md  test_concurrency.py  test_paste.py  test_sendinput_compat.py
.claude/skills/build-and-package/: SKILL.md
.claude/skills/push-and-package/: SKILL.md
.claude/skills/restart/: SKILL.md  restart-with-log.ps1
.claude/skills/tap-test/: SKILL.md  run_tap_test.py
.claude/skills/verify/: test_concurrency.py  test_paste.py
.codex/skills/build-and-package/: SKILL.md
.codex/skills/push-and-package/: SKILL.md
.cursor/skills/build-and-package/: SKILL.md
.cursor/skills/push-and-package/: SKILL.md
.cursor/skills/restart/: restart-with-log.ps1
.cursor/skills/tap-test/: run_tap_test.py
.cursor/skills/verify/: SKILL.md  test_audio_pipeline.py  test_paste.py  (+2 more)
scripts/: debug_query.py  deploy.ps1  pack.ps1  setup-dev-venv.ps1  test_line_paste.py
src/ai_whisper/: __init__.py  app.py  controller.py  diag.py  logging_setup.py  models.py  paths.py  text_processing.py
tests/: test_hotkeys.py  test_settings_store.py  test_text_processing.py
tests/realtime-stt-comparison/: .env.example  .gitignore  package-lock.json  package.json  server.js
tools/: tap_4tap_sim.py  tap_conf_sweep.py  tap_confidence_sim.py  tap_fp_context.py  tap_fp_count.py  tap_new_metrics_sweep.py
(+15 files in other folders)
